// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`api > returns appropriate content for health 1`] = `
{
  "status": "ok",
}
`;

exports[`api > returns appropriate content for something-that-is-random 1`] = `
{
  "error": {
    "code": "not_found",
    "message": "Not found",
  },
}
`;

exports[`api > returns appropriate content for version 1`] = `
{
  "version": "0.1.0",
}
`;

exports[`auth > can run through the whole sign up, login and refresh flow 1`] = `
{
  "accessToken": "swa:f4cf066e78b9626e28a2f76ab4a12bc1ca51ef5aeb184bd657ab88ed83df70f4:11111111111111111111111111111111",
  "accessTokenExpiry": 1746403200000,
  "clientId": "test-client-id",
  "refreshToken": "swr:f4cf066e78b9626e28a2f76ab4a12bc1ca51ef5aeb184bd657ab88ed83df70f4:22222222222222222222222222222222",
  "refreshTokenExpiry": 1748908800000,
}
`;

exports[`auth > can run through the whole sign up, login and refresh flow 2`] = `
{
  "accessToken": "swa:f4cf066e78b9626e28a2f76ab4a12bc1ca51ef5aeb184bd657ab88ed83df70f4:33333333333333333333333333333333",
  "accessTokenExpiry": 1746403200000,
  "clientId": "test-client-id",
  "refreshToken": "swr:f4cf066e78b9626e28a2f76ab4a12bc1ca51ef5aeb184bd657ab88ed83df70f4:44444444444444444444444444444444",
  "refreshTokenExpiry": 1748908800000,
}
`;

exports[`auth > can run through the whole sign up, login and refresh flow 3`] = `
{
  "error": {
    "code": "unauthorized",
    "message": "Invalid token",
  },
}
`;

exports[`auth > can run through the whole sign up, login and refresh flow 4`] = `
{
  "error": {
    "code": "unauthorized",
    "message": "Invalid token",
  },
}
`;
